fixed vertical alignment

--- a/mtgordle-app/src/App.css
+++ b/mtgordle-app/src/App.css
@@ -85,6 +85,7 @@
   margin-top: 0.3em;
   margin-bottom: 0.3em;
   font-size: 2.0em;
+  
 }
 
 
@@ -101,11 +102,14 @@
 .current-guesses {
   display: inline-block;
   margin-left:5em;
+  vertical-align: top;
 }
 
 .card-info {
   display: inline-block;
   margin-right:5em;
+  vertical-align: top;
+
 }
 
 .submit-button {
